boreal/tests/assets/invalid_files/parsing/hex_string_not_mask_all.yar
// [error: negating an unknown byte is not allowed]
rule a {
    strings:
        $a = { AB ~?? 0F }
    condition:
        $a
}
